--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Imagemap-annotation by WebDweb</title>
+    <title>ImageMap-annotation by WebDweb</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Imagemap-annotation</h1>
+        <h1>ImageMap-annotation</h1>
         <p>Using HTML5 to dynamically style images maps</p>
 
         <p class="view"><a href="https://github.com/WebDweb/imagemap-annotation">View the Project on GitHub <small>WebDweb/imagemap-annotation</small></a></p>
@@ -28,9 +28,9 @@
         </ul>
       </header>
       <section>
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Welcome to Webweb project page for ImageMap annotation.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This imageMap annotation is the easiest way to create image maps and style them with onhover events in the way you want. You can even customize this javascript file to add custom HTML5 elements as you wish. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
