--- a/index.html
+++ b/index.html
@@ -1,36 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>ImageMap-annotation by WebDweb</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Imagemap-annotation : Using HTML5 to dynamically style images maps" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Imagemap-annotation</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>ImageMap-annotation</h1>
-        <p>Using HTML5 to dynamically style images maps</p>
 
-        <p class="view"><a href="https://github.com/WebDweb/imagemap-annotation">View the Project on GitHub <small>WebDweb/imagemap-annotation</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/WebDweb/imagemap-annotation">View on GitHub</a>
 
+          <h1 id="project_title">Imagemap-annotation</h1>
+          <h2 id="project_tagline">Using HTML5 to dynamically style images maps</h2>
 
-        <ul>
-          <li><a href="https://github.com/WebDweb/imagemap-annotation/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/WebDweb/imagemap-annotation/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/WebDweb/imagemap-annotation">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>Welcome to Webweb project page for ImageMap annotation.</h3>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/WebDweb/imagemap-annotation/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/WebDweb/imagemap-annotation/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-<p>This imageMap annotation is the easiest way to create image maps and style them with onhover events in the way you want. You can even customize this javascript file to add custom HTML5 elements as you wish. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
@@ -53,14 +56,19 @@ $ git checkout gh-pages
 
 <h3>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Having trouble with Pages? Check out the documentation if it's ready at the time you are reading this or just contact me for documentation. We’ll help you sort it out.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/WebDweb">WebDweb</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Imagemap-annotation maintained by <a href="https://github.com/WebDweb">WebDweb</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
